[project]
name = "tw-us-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "tw-us-cc",email = "twuscrisisconnect@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material (>=9.6.11,<10.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "mkdocs-minify-plugin (>=0.8.0,<0.9.0)",
    "mkdocs-awesome-nav (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tw_us"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
